<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="7"
    android:columnCount="3"
    android:useDefaultMargins="true"
    tools:context="tr.com.alicolaker.ordercalculator.MainActivity"
    android:padding="12dp">

    <TextView
        android:text="@string/corba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/corbaTextView"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:layout_column="0"
        android:textColor="@color/teal9000" />

    <Spinner
        android:id="@+id/corbaSpinner"
        android:layout_row="0"
        android:layout_column="1"
        android:entries="@array/corba"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical|fill_vertical|fill_horizontal"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="3" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/corbaFiyat"
        android:layout_row="0"
        android:layout_column="2"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:background="@color/colorAccent"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="2"
        android:elevation="5dp" />

    <TextView
        android:text="@string/yemek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yemekTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:textColor="@color/teal9000" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yemekSpinner"
        android:entries="@array/yemek"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center_vertical|fill_vertical|fill_horizontal"
        android:padding="12dp"
        android:layout_columnWeight="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yemekFiyat"
        android:layout_row="1"
        android:layout_column="2"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:background="@color/colorAccent"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="2"
        android:elevation="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tatliFiyat"
        android:layout_row="2"
        android:layout_column="2"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:background="@color/colorAccent"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="2"
        android:elevation="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tatliSpinner"
        android:entries="@array/tatli"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center_vertical|fill_vertical|fill_horizontal"
        android:padding="12dp"
        android:layout_columnWeight="3" />

    <TextView
        android:text="@string/tatli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tatliTextView"
        android:layout_row="2"
        android:layout_column="0"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:textColor="@color/teal9000" />

    <TextView
        android:text="@string/icecek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icecekTextView"
        android:layout_row="3"
        android:layout_column="0"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:textColor="@color/teal9000" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iceckSpinner"
        android:layout_row="3"
        android:entries="@array/icecek"
        android:layout_column="1"
        android:layout_gravity="center_vertical|fill_vertical|fill_horizontal"
        android:padding="12dp"
        android:layout_columnWeight="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icecekFiyat"
        android:layout_row="3"
        android:layout_column="2"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:background="@color/colorAccent"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="2"
        android:elevation="5dp" />

    <SeekBar
        android:layout_height="wrap_content"
        android:id="@+id/hisseSeekBar"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:padding="12dp"
        android:max="30"
        android:progress="15" />

    <TextView
        android:text="%15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hisseTextView"
        android:layout_row="4"
        android:layout_column="0"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:textColor="@color/teal9000" />

    <TextView
        android:text="@string/bahsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bahsisTextView"
        android:layout_row="5"
        android:layout_column="0"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:textColor="@color/teal9000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bahsisFiyat"
        android:layout_row="5"
        android:layout_column="1"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_columnSpan="2"
        android:background="@color/colorAccent"
        android:layout_gravity="fill_horizontal"
        android:padding="12dp"
        android:elevation="5dp" />

    <TextView
        android:text="@string/toplam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toplamTextView"
        android:layout_row="6"
        android:layout_column="0"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:padding="12dp"
        android:layout_gravity="fill_horizontal"
        android:textColor="@color/teal9000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toplamFiyat"
        android:layout_row="6"
        android:layout_column="1"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_columnSpan="2"
        android:background="@color/colorAccent"
        android:layout_gravity="fill_horizontal"
        android:padding="12dp"
        android:elevation="5dp" />

</GridLayout>
